# super_mario_bros

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md
.github/workflows/: ci.yml  linux.yml
cmake/: dev-mode.cmake  install-rules.cmake  install-script.cmake  variables.cmake
cmake/lib/: raygui.cmake
source/: lib.cpp  main.cpp
source/benlib/: CMakeLists.txt
source/benlib/include/: block.hpp  direction.h  entity.hpp  level.hpp  mario.hpp  sprite.hpp
source/intro/: benlib_intro.h  raylib_cpp_intro.h  raylib_intro.h
test/: CMakeLists.txt
test/source/: super_mario_bros_test.cpp
